    flexibel, tolerant now
  * config overhaul, much more dynamic checks, including fixes for SunOS
    environment. Also fixed confusing double-checks for some of the variables
    in cdda2wav.c
  * mass renaming of applications and libraries

  [ Christian Fromme ]
  * big cleanup, phase I, getting rid from Cstyle function definitions in
    applications

 -- Eduard Bloch <blade@debian.org>  Wed,  6 Sep 2006 22:05:30 +0200

cdrkit (1.0) RELEASED; urgency=low

  [ Eduard Bloch ]
  * mapping of ATAPI: -> ATA: method on linux-2.6 and some code beautification
  * added a atexit handler to stop the FIFO process more reliably, since
    Schilling's constructs seem to terminate the application on too many
    places
  * print Burnfree state/preparation messages only with high verbosity

  [ Dennis Vshivkov ]
  * sorted display of files when needed

  [ Joerg Jaspert]
  * Remove all the printing of useless messages. This is based on GPLed
    code, so we follow the letter of the GPL as it is interpreted by 99%
    of the world, including its authors. Especially as Joerg was never able
    to give us any clear explanation what other license he may think
    cdrtools had, despite us asking multiple times. So we have no other
    choice than to take whats written down, and thats GPL.

 -- Joerg Jaspert <joerg@debian.org>  Mon, 20 Nov 2006 19:25:10 +0100

cdrkit (1.0pre5) RELEASED; urgency=low

  [ Eduard Bloch ]
  * added better check for capability.h and FATAL_ERROR if it's missing on Linux
  * wodim.1 updates, ie. moved suid howto to README.suidroot, Linux bashing to
    README.linux, more notes about non-root usage
  * more carefull description of the role of previous developer and his own
    project
  * fixed libmagic detection
  * rewrote README.mkisofs, README.win32
  * better track numbers extraction command in cdda2ogg/cdda2mp3
  * reenabled (forgotten) support for libedc
  * table formating fixes in cdda2wav.1, helps small terminals
  * AIX 5l port